# stm32-leds-board

./: .gitignore  CMakeLists.txt  openocd.cfg
STM32Cube_FW_F1_V1.8.4/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
STM32Cube_FW_F1_V1.8.4/_htmresc/: ReleaseNotes_Patch.html
cmake/stm32/: common.cmake  utilities.cmake
device/: CMakeLists.txt  device.h  device_accelerometer.c  device_accelerometer.h  device_battery.c  device_battery.h  device_buttons.c  device_buttons.h  device_i2c.c  device_i2c.h  device_led.c  device_led.h  device_ledmatrix.c  device_ledmatrix.h  device_random.c  device_random.h  device_sdcard.c  device_sdcard.h  device_system.c  device_system.h  device_uart.c  device_uart.h  device_usb.c  device_usb.h
gfx/: balls_icon.h  files_icon.h  gfx_convert.py  life_icon.h  microsd_err_icon.h  sand_icon.h
lib/: CMakeLists.txt
lib/FatFs/: CMakeLists.txt  ff.h  ffconf.h  ffsystem.c
lib/ringbuffer/: CMakeLists.txt  ringbuffer.c  ringbuffer.h
src/: FreeRTOSConfig.h  fatfs_sd.c  font.c  font.h  freertos.c  main.cpp  pins.h  retarget.c  spi_diskio.c  stm32f1xx_hal_conf.h  u8_fonts.h  u8x8_fonts.c  vec2.h
src/apps/balls/: physics.cpp  physics.h
src/apps/cellular_automaton/: cellular_automaton.cpp  cellular_automaton.h  game_of_life.cpp  game_of_life.h  sand_simulation.cpp  sand_simulation.h
src/apps/cellular_automaton/elements/: element.cpp  element.h  game_of_life_cell.cpp  game_of_life_cell.h  sand.cpp  sand.h  wall.cpp  wall.h
